<resources>
    <string name="app_name">Machinery</string>
    <string name="main_title">@string/app_name</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="title_new_calc">New...</string>
    <string name="title_gearing">Gearing...</string>
    <string name="title_change_gears">Change Gears</string>
    <string name="title_gearwheels">Gear Wheels</string>
    <string name="title_gearwheels_extended">Gear Wheels Extended</string>
    
    <string name="title_belting">Belting...</string>
    <string name="title_belt">Belt</string>
    
    <string name="title_save">Save</string>
    <string name="title_clear">Clear</string>
    <string name="title_close">Close</string>
    <string name="title_options">Options</string>
    
    <!-- nav bar items -->
    <string name="nav_start_page">Start Page</string>
    <string name="nav_references">References</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_help">Help</string>
    <string name="nav_about">About</string>
    <string name="nav_exit">Exit</string>
    
    <string name="title_start_page">Machinery</string>
    <string name="title_references">References</string>
    <string name="title_gears_design">Gears Design</string>
    <string name="title_settings">Settings</string>
    <string name="title_change_gears_design">Change Gears</string>
    <string name="title_gearwheels_design">Gear Wheels</string>
    <string name="title_gearwheelsext_design">Gear Wheels Extended</string>
    <string name="machinery">Machinery</string>
    <string name="machinery_apsolete_email">machinery.apsolete@gmail.com</string>

</resources>
