<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/mi_start_page"
        android:title="@string/nav_start_page"
        android:icon="@drawable/ic_settings_applications_white_36dp"/>
    <item
        android:id="@+id/mi_references"
        android:title="@string/nav_references"
        android:icon="@drawable/ic_info_outline_white_36dp"/>
    <item
        android:id="@+id/mi_settings"
        android:title="@string/nav_settings"
        android:icon="@drawable/ic_settings_applications_white_36dp"/>
    <item
        android:id="@+id/mi_help"
        android:title="@string/nav_help"
        android:icon="@drawable/ic_help_white_24dp"
        app:showAsAction="never"/>
    <item
        android:id="@+id/mi_about"
        android:title="@string/nav_about"
        android:icon="@drawable/ic_info_white_24dp"
        app:showAsAction="never"/>
    <item
        android:id="@+id/mi_exit"
        android:title="@string/nav_exit"
        android:icon="@drawable/ic_exit_to_app_white_36dp"/>

</menu>
